[gd_scene load_steps=4 format=3 uid="uid://vnih610ckder"]

[ext_resource type="Script" uid="uid://bf87k42ux6cyh" path="res://ui/stats_panel/stats_panel.gd" id="1_qrigu"]
[ext_resource type="PackedScene" uid="uid://dv0kmcoknucck" path="res://ui/stats_panel/weapon_stat_button.tscn" id="2_6x54g"]
[ext_resource type="PackedScene" uid="uid://cwmbot80w541i" path="res://ui/stats_panel/targeting_picker.tscn" id="3_ylrm5"]

[node name="StatsPanel" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_qrigu")
weapon_button_scene = ExtResource("2_6x54g")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(800, 500)
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MoveSpeedLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="LuckLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="PickupRadiusLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="CriticalChanceLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="CriticalDamageLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="DamageMultiplierLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="FirerateLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="ProjectileSpeedLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="AreaSizeLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2

[node name="ItemsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Weapons" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
layout_mode = 2
text = "Weapons:"

[node name="WeaponsGridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
layout_mode = 2

[node name="Artifacts" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
layout_mode = 2
text = "Artifacts:"

[node name="ArtifactsGridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
layout_mode = 2

[node name="TargetingPicker" parent="." instance=ExtResource("3_ylrm5")]
